MathParser.py
# Generated from Math.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MathParser ( Parser ):

    grammarFileName = "Math.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'**'", "'exp'", 
                     "'('", "')'", "'sqrt'", "'sin'", "'cos'", "'tan'", 
                     "'log'", "','", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUMBER", "VARIABLE", "WS" ]

    RULE_program = 0
    RULE_expression = 1
    RULE_function = 2
    RULE_matrix = 3
    RULE_row = 4
    RULE_element = 5
    RULE_constants = 6

    ruleNames =  [ "program", "expression", "function", "matrix", "row", 
                   "element", "constants" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    NUMBER=17
    VARIABLE=18
    WS=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(MathParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(MathParser.EOF, 0)

        def getRuleIndex(self):
            return MathParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MathParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.expression()
            self.state = 15
            self.match(MathParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(MathParser.FunctionContext,0)


        def matrix(self):
            return self.getTypedRuleContext(MathParser.MatrixContext,0)


        def constants(self):
            return self.getTypedRuleContext(MathParser.ConstantsContext,0)


        def getRuleIndex(self):
            return MathParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = MathParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.state = 20
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 17
                self.function(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 18
                self.matrix()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 19
                self.constants()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathParser.FunctionContext)
            else:
                return self.getTypedRuleContext(MathParser.FunctionContext,i)


        def NUMBER(self):
            return self.getToken(MathParser.NUMBER, 0)

        def VARIABLE(self):
            return self.getToken(MathParser.VARIABLE, 0)

        def getRuleIndex(self):
            return MathParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)



    def function(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MathParser.FunctionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_function, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 23
                self.match(MathParser.T__5)
                self.state = 24
                self.match(MathParser.T__6)
                self.state = 25
                self.function(0)
                self.state = 26
                self.match(MathParser.T__7)
                pass

            elif la_ == 2:
                self.state = 28
                self.match(MathParser.T__8)
                self.state = 29
                self.match(MathParser.T__6)
                self.state = 30
                self.function(0)
                self.state = 31
                self.match(MathParser.T__7)
                pass

            elif la_ == 3:
                self.state = 33
                self.match(MathParser.T__9)
                self.state = 34
                self.match(MathParser.T__6)
                self.state = 35
                self.function(0)
                self.state = 36
                self.match(MathParser.T__7)
                pass

            elif la_ == 4:
                self.state = 38
                self.match(MathParser.T__10)
                self.state = 39
                self.match(MathParser.T__6)
                self.state = 40
                self.function(0)
                self.state = 41
                self.match(MathParser.T__7)
                pass

            elif la_ == 5:
                self.state = 43
                self.match(MathParser.T__11)
                self.state = 44
                self.match(MathParser.T__6)
                self.state = 45
                self.function(0)
                self.state = 46
                self.match(MathParser.T__7)
                pass

            elif la_ == 6:
                self.state = 48
                self.match(MathParser.T__12)
                self.state = 49
                self.match(MathParser.T__6)
                self.state = 50
                self.function(0)
                self.state = 51
                self.match(MathParser.T__7)
                pass

            elif la_ == 7:
                self.state = 53
                self.match(MathParser.T__12)
                self.state = 54
                self.match(MathParser.T__6)
                self.state = 55
                self.function(0)
                self.state = 56
                self.match(MathParser.T__13)
                self.state = 57
                self.match(MathParser.NUMBER)
                self.state = 58
                self.match(MathParser.T__7)
                pass

            elif la_ == 8:
                self.state = 60
                self.match(MathParser.T__6)
                self.state = 61
                self.function(0)
                self.state = 62
                self.match(MathParser.T__7)
                pass

            elif la_ == 9:
                self.state = 64
                self.match(MathParser.T__1)
                self.state = 65
                self.function(3)
                pass

            elif la_ == 10:
                self.state = 66
                self.match(MathParser.NUMBER)
                pass

            elif la_ == 11:
                self.state = 67
                self.match(MathParser.VARIABLE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 81
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 79
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = MathParser.FunctionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_function)
                        self.state = 70
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 71
                        _la = self._input.LA(1)
                        if not(_la==MathParser.T__0 or _la==MathParser.T__1):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 72
                        self.function(15)
                        pass

                    elif la_ == 2:
                        localctx = MathParser.FunctionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_function)
                        self.state = 73
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 74
                        _la = self._input.LA(1)
                        if not(_la==MathParser.T__2 or _la==MathParser.T__3):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 75
                        self.function(14)
                        pass

                    elif la_ == 3:
                        localctx = MathParser.FunctionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_function)
                        self.state = 76
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")

                        self.state = 77
                        self.match(MathParser.T__4)
                        self.state = 78
                        self.function(13)
                        pass

             
                self.state = 83
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MatrixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def row(self):
            return self.getTypedRuleContext(MathParser.RowContext,0)


        def getRuleIndex(self):
            return MathParser.RULE_matrix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatrix" ):
                listener.enterMatrix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatrix" ):
                listener.exitMatrix(self)




    def matrix(self):

        localctx = MathParser.MatrixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_matrix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(MathParser.T__14)
            self.state = 85
            self.row()
            self.state = 86
            self.match(MathParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MathParser.ElementContext)
            else:
                return self.getTypedRuleContext(MathParser.ElementContext,i)


        def getRuleIndex(self):
            return MathParser.RULE_row

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRow" ):
                listener.enterRow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRow" ):
                listener.exitRow(self)




    def row(self):

        localctx = MathParser.RowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_row)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.element()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MathParser.T__13:
                self.state = 89
                self.match(MathParser.T__13)
                self.state = 90
                self.element()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def row(self):
            return self.getTypedRuleContext(MathParser.RowContext,0)


        def NUMBER(self):
            return self.getToken(MathParser.NUMBER, 0)

        def getRuleIndex(self):
            return MathParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = MathParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_element)
        try:
            self.state = 101
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MathParser.T__14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.match(MathParser.T__14)
                self.state = 97
                self.row()
                self.state = 98
                self.match(MathParser.T__15)
                pass
            elif token in [MathParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.match(MathParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstantsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MathParser.NUMBER)
            else:
                return self.getToken(MathParser.NUMBER, i)

        def getRuleIndex(self):
            return MathParser.RULE_constants

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstants" ):
                listener.enterConstants(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstants" ):
                listener.exitConstants(self)




    def constants(self):

        localctx = MathParser.ConstantsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constants)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(MathParser.T__14)
            self.state = 104
            self.match(MathParser.NUMBER)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MathParser.T__13:
                self.state = 105
                self.match(MathParser.T__13)
                self.state = 106
                self.match(MathParser.NUMBER)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self.match(MathParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.function_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def function_sempred(self, localctx:FunctionContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 12)
         




